<resources>
    <string name="title_item_viewer">Viewer</string>
    <string name="title_item_local_folder_list" translatable="false">@string/local_folders</string>
    <string name="title_item_local_file_list">All Documents</string>
    <string name="action_settings">Settings</string>
    <string name="action_exit">Exit</string>
    <string name="imageview_icon_file_type_description">Icon File Type</string>
    <string name="fastscroller_handle">fast scroll handler</string>
    <string name="fastscroller_track">fast scroll track</string>
    <string name="file_info_document_protected"><![CDATA[This document is password protected.]]></string>
    <string name="file_info_document_title"><![CDATA[<b>Title</b><br>%1$s<br>]]></string>
    <string name="file_info_document_author"><![CDATA[<b>Author</b><br>%1$s<br>]]></string>
    <string name="file_info_document_pages"><![CDATA[<b>Number of Pages</b><br>%1$s<br>]]></string>
    <string name="file_info_document_path"><![CDATA[<b>Path</b><br>%1$s<br>]]></string>
    <string name="file_info_original_document_path"><![CDATA[<b>Original Path</b><br>%1$s<br>]]></string>
    <string name="file_info_document_size"><![CDATA[<b>Size</b><br>%1$s<br>]]></string>
    <string name="file_info_document_folder_contains"><![CDATA[<b>Contains</b><br>%1$s<br>]]></string>
    <string name="file_info_document_date_modified"><![CDATA[<b>Date Modified</b><br>%1$s<br>]]></string>
    <string name="file_info_document_date_deleted"><![CDATA[<b>Date Deleted</b><br>%1$s<br>]]></string>
    <string name="file_info_document_producer"><![CDATA[<b>Producer</b><br>%1$s<br>]]></string>
    <string name="file_info_document_creator"><![CDATA[<b>Creator</b><br>%1$s<br>]]></string>
    <string name="file_info_document_attr_not_available"><![CDATA[<i>Not available</i>]]></string>
    <string name="dialog_file_info_title">File Details</string>
    <string name="dialog_file_info_body"><![CDATA[<b>File Name</b><br>%1$s<br><br><b>Path</b><br>%2$s<br><br><b>Size</b><br>%3$s (%4$s Bytes)<br><br><b>Date Modified</b><br>%5$s<br>]]></string>
    <string name="dialog_folder_info_title">Folder Details</string>
    <string name="dialog_folder_info_body"><![CDATA[<b>Folder Name</b><br>%1$s<br><br><b>Path</b><br>%2$s<br><br><b>Contains</b><br>%3$s<br><br><b>Date Modified</b><br>%4$s<br>]]></string>
    <string name="dialog_folder_info_size">%1$d files, %2$d folders</string>
    <string name="local_folders">Folders</string>
    <string name="title_item_recent">Recent</string>
    <string name="title_item_favorites">Favorites</string>
    <string name="root_folder">Root</string>
    <string name="dialog_create_new_folder_title">New Folder</string>
    <string name="dialog_create_new_blank_pdf_title">New PDF</string>
    <string name="dialog_create_new_photo_pdf_title">PDF from Image</string>
    <string name="dialog_create_new_docs_pdf_title">PDF from Documents</string>
    <string name="dialog_create_new_webpage_pdf_title">PDF from Webpage</string>
    <string name="convert_to_pdf">Convert to PDF</string>
    <string name="import_webpage_wait">Importing webpage&#8230;</string>
    <string name="dialog_webpage_pdf_title">Create PDF from webpage</string>
    <string name="dialog_webpage_pdf_body">Type the URL below</string>
    <string name="dialog_webpage_pdf_hint" translatable="false">URL</string>
    <string name="dialog_webpage_pdf_convert">Convert</string>
    <string name="import_webpage_error_message_title">Cannot convert to PDF</string>
    <string name="import_webpage_error_message_content">Unfortunately %1$s could not be converted to a PDF.</string>
    <string name="create_file_invalid_error_message">There was a problem trying to create the file.</string>
    <string name="dialog_create_title">Create Folder</string>
    <string name="dialog_create_folder_title_hint" translatable="false">@string/dialog_rename_folder_hint</string>
    <string name="dialog_create_folder_invalid_folder_name_message">Invalid folder name. Only upper and lowercase letters, numbers, and underscores are accepted.</string>
    <string name="dialog_create_folder_invalid_folder_name_already_exists_message">This folder already exists. Please use another name.</string>
    <string name="dialog_create_folder_invalid_folder_name_error_message">There was a problem trying to create the folder. Please try again.</string>
    <string name="dialog_delete_msg_files"><![CDATA[Are you sure you want to <font color=#FF0000>delete</font> these files from your device? This is <font color=#FF0000>permanent</font> and <font color=#FF0000>cannot be undone</font>.]]></string>
    <string name="dialog_delete_title">Delete File</string>
    <string name="dialog_delete_file_message"><![CDATA[Are you sure you want to <font color=#FF0000>delete</font> \"%1$s\" from your device? This is <font color=#FF0000>permanent</font> and <font color=#FF0000>cannot be undone</font>.]]></string>
    <string name="dialog_delete_folder_message"><![CDATA[Do you want to <font color=#FF0000>delete</font> %1$d files and %2$d subfolders in \"%3$s\" from your device? This is <font color=#FF0000>permanent</font> and <font color=#FF0000>cannot be undone</font>.]]></string>
    <string name="dialog_delete_error_message">It was not possible to delete \"%1$s\".</string>
    <string name="dialog_delete_error_message_general">An error occurred trying to delete the files.</string>
    <string name="delete_file_not_found_error_message">Unable to find the \"%1$s\" to delete.</string>
    <string name="restore_file_not_found_error_message">Unable to find the \"%1$s\" to restore.</string>
    <string name="move_file_not_found_error_message">Unable to find the \"%1$s\" to move.</string>
    <string name="parent_not_found_error_message">Unable to find the parent folder of \"%1$s\".</string>
    <string name="load_trash_not_found_error_message">Unable to load Trash Bin.</string>
    <string name="trash_message_toast">Deleted file/folder can be found in Trash Bin.</string>
    <string name="delete_message_toast">Successfully deleted.</string>
    <string name="restore_message_toast">Successfully restored.</string>
    <string name="move_message_toast">Successfully Moved.</string>
    <string name="move_error_message">It was not possible to move \"%1$s\".</string>
    <string name="restore_error_message">It was not possible to restore \"%1$s\".</string>
    <string name="restore_error_message_general">An error occurred trying to recover the files.</string>
    <string name="dialog_move_file_already_exists_message">\"%1$s\" already exists at this location. Do you want to replace it with the file you\'re moving?</string>
    <string name="dialog_move_file_error_message">An error occurred while moving %1$s.</string>
    <string name="dialog_move_continue">Continue</string>
    <string name="dialog_move_repeat_action">Repeat for all files</string>
    <string name="duplicate_file_error_message">There was a problem trying to duplicate the file. Please try again.</string>
    <string name="duplicate_file_error_message_no_space">There is insufficient storage space on the device. Please clear space and try again.</string>
    <string name="duplicate_file_max_error_message">Maximum number of duplicated files reached. Please delete unnecessary files and try again.</string>
    <string name="file_type_external_file">External</string>
    <string name="dialog_external_file_readonly_action"><![CDATA[In the %1$s tab, your SD Card files are read only and you cannot %2$s files. <br><br> Please navigate to the SD Card tab, where %3$s has write access to your SD Card files.]]></string>
    <string name="dialog_external_file_readonly_action_positive_btn">Enable Write Access</string>
    <string name="dialog_folder_go_to_sd_card_button">Go To SD Card Now</string>
    <string name="dialog_folder_go_to_sd_card_description">Open files stored on the SD card using the \"SD Card\" tab located in the side navigation drawer. Android restricts access to files on the SD card %1$s.</string>
    <string name="dialog_files_go_to_sd_card_description">This file will be opened as read-only. To modify, open it using the \"SD Card\" tab located in the side navigation drawer where %1$s has write access. %2$s.</string>
    <string name="dialog_go_to_sd_card_description_more_info">Insert more info here.</string>
    <string name="dialog_external_intent_not_supported">It seems like your device does not support this functionality. %1$s</string>
    <string name="dialog_external_intent_not_supported_more_info">Insert more info here.</string>
    <string name="snack_bar_local_folder_read_only">Files are read-only</string>
    <string name="snack_bar_local_folder_read_only_redirect">Enable Saving</string>
    <string name="dialog_remove_roots_title">Remove Folder</string>
    <string name="dialog_remove_root_msg">Are you sure you want to remove access to \"%1$s\"? The folder will not be deleted.</string>
    <string name="dialog_remove_roots_msg">Are you sure you want to remove access to these folders? The folders will not be deleted.</string>
    <string name="dialog_remove_roots_error_message">An error occurred trying to remove \"%1$s\".</string>
    <string name="dialog_remove_roots_error_message_general">An error occurred trying to remove the folders.</string>
    <string name="dialog_merge_title">Merge Files</string>
    <string name="menu_add_options">Adding Options</string>
    <string name="dialog_merge_add_document">Add Document</string>
    <string name="dialog_merge_set_file_name_title">File Name</string>
    <string name="dialog_merge_set_file_name_hint">Enter a file name</string>
    <string name="dialog_merge_error_message_general">An error occurred trying to merge the files.</string>
    <string name="dialog_merge_error_no_files">No files to merge</string>
    <string name="dialog_merge_save_location">Select a Save Location</string>
    <string name="file_type_pdf" comment="Used to filter by file type">PDFs</string>
    <string name="file_type_docx" comment="Used to filter by file type">Office Documents</string>
    <string name="file_type_image" comment="Used to filter by file type">Images</string>
    <string name="file_type_text" comment="Used to filter by file type">Text Files</string>
    <string name="file_type_show_all" comment="Used to turn of file type filters and show all">Show All File Types</string>
    <string name="action_file_filter" comment="Filter files by various properties">Filter</string>
    <string name="pref_category_general">General</string>
    <string name="pref_category_tabs">Tabs</string>
    <string name="pref_category_stylus">Stylus</string>
    <string name="pref_category_about">About</string>
    <string name="pref_category_viewing">Viewing</string>
    <string name="pref_category_annotating">Annotating</string>
    <string name="pref_stylus_as_pen_title">Stylus as Pen</string>
    <string name="pref_stylus_as_pen_summary">When enabled, the stylus will create (and edit) annotations, and a finger will scroll and zoom the viewer.</string>
    <string name="pref_draw_with_finger_title">Draw with Finger</string>
    <string name="pref_draw_with_finger_summary">When enabled, you will be able to draw with your finger when Stylus as Pen is enabled</string>
    <string name="loading_files_wait">Loading files&#8230;</string>
    <string name="default_stylus_summary">When set, the stylus will default to the selected option from this list.</string>
    <string name="default_stylus_tool">Default Stylus Tool</string>
    <string name="choose_an_option_please">Choose an option please</string>
</resources>