<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_file_filter"
        android:title="@string/action_file_filter"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/menu_file_filter_all"
                android:checkable="true"
                android:title="@string/file_type_show_all"
                app:showAsAction="never" />
            <item
                android:id="@+id/menu_file_filter_pdf"
                android:checkable="true"
                android:title="@string/file_type_pdf"
                app:showAsAction="never" />
            <item
                android:id="@+id/menu_file_filter_docx"
                android:checkable="true"
                android:title="@string/file_type_docx"
                app:showAsAction="never" />
            <item
                android:id="@+id/menu_file_filter_image"
                android:checkable="true"
                android:title="@string/file_type_image"
                app:showAsAction="never" />
            <item
                android:id="@+id/menu_file_filter_text"
                android:checkable="true"
                android:title="@string/file_type_text"
                app:showAsAction="never" />

        </menu>
    </item>
</menu>
